<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_account"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/preferences" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/my_tickets" />
    </group>
</menu>
