<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:srcCompat="@mipmap/ic_travlendar"
        android:contentDescription="@string/iconAppDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/travlendar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/melziPietro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melziPietro"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/pinaAlessandro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pinaAlessandro"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvadoreMatteo"
        android:textSize="12sp" />

</LinearLayout>
